@@ -212,7 +212,7 @@ public class ApplicationController {
         return findGlobalEndpoint(deployment).map(endpoint -> {
             try {
                 EndpointStatus status = configServer.getGlobalRotationStatus(deployment, endpoint.upstreamName());
-                return Collections.singletonMap(endpoint, status);
+                return Map.of(endpoint, status);
             } catch (IOException e) {
                 throw new UncheckedIOException("Failed to get rotation status of " + deployment, e);
             }
@@ -288,7 +288,6 @@ public class ApplicationController {
             ApplicationVersion applicationVersion;
             ApplicationPackage applicationPackage;
             Set<String> rotationNames = new HashSet<>();
-            Set<String> cnames;
 
             try (Lock lock = lock(applicationId)) {
                 LockedApplication application = new LockedApplication(require(applicationId), lock);
@@ -330,9 +329,9 @@ public class ApplicationController {
                 application = withRotation(application, zone);
                 Application app = application.get();
                 // Include global DNS names
-                cnames = app.endpointsIn(controller.system()).asList().stream().map(Endpoint::dnsName).collect(Collectors.toSet());
+                app.endpointsIn(controller.system()).asList().stream().map(Endpoint::dnsName).forEach(rotationNames::add);
                 // Include rotation ID to ensure that deployment can respond to health checks with rotation ID as Host header
-                app.rotations().stream().map(RotationId::asString).forEach(cnames::add);
+                app.rotations().stream().map(RotationId::asString).forEach(rotationNames::add);
 
                 // Update application with information from application package
                 if (   ! preferOldestVersion
@@ -344,7 +343,7 @@ public class ApplicationController {
 
             // Carry out deployment without holding the application lock.
             options = withVersion(platformVersion, options);
-            ActivateResult result = deploy(applicationId, applicationPackage, zone, options, rotationNames, cnames);
+            ActivateResult result = deploy(applicationId, applicationPackage, zone, options, rotationNames);
 
             lockOrThrow(applicationId, application ->
                     store(application.withNewDeployment(zone, applicationVersion, platformVersion, clock.instant(),
@@ -411,7 +410,7 @@ public class ApplicationController {
                     artifactRepository.getSystemApplicationPackage(application.id(), zone, version)
             );
             DeployOptions options = withVersion(version, DeployOptions.none());
-            return deploy(application.id(), applicationPackage, zone, options, Set.of(), Set.of());
+            return deploy(application.id(), applicationPackage, zone, options, Set.of());
         } else {
            throw new RuntimeException("This system application does not have an application package: " + application.id().toShortString());
         }
@@ -419,16 +418,15 @@ public class ApplicationController {
 
     /** Deploys the given tester application to the given zone. */
     public ActivateResult deployTester(TesterId tester, ApplicationPackage applicationPackage, ZoneId zone, DeployOptions options) {
-        return deploy(tester.id(), applicationPackage, zone, options, Collections.emptySet(), Collections.emptySet());
+        return deploy(tester.id(), applicationPackage, zone, options, Set.of());
     }
 
     private ActivateResult deploy(ApplicationId application, ApplicationPackage applicationPackage,
                                   ZoneId zone, DeployOptions deployOptions,
-                                  Set<String> rotationNames, Set<String> cnames) {
+                                  Set<String> rotationNames) {
         DeploymentId deploymentId = new DeploymentId(application, zone);
         ConfigServer.PreparedApplication preparedApplication =
-                configServer.deploy(deploymentId, deployOptions, cnames, rotationNames,
-                                    applicationPackage.zippedContent());
+                configServer.deploy(deploymentId, deployOptions, rotationNames, applicationPackage.zippedContent());
 
         // Refresh routing policies on successful deployment. At this point we can safely assume that the config server
         // has allocated load balancers for the deployment.
@@ -472,8 +470,8 @@ public class ApplicationController {
         logEntry.message = "Ignoring deployment of application '" + application + "' to " + zone +
                            " as a deployment is not currently expected";
         PrepareResponse prepareResponse = new PrepareResponse();
-        prepareResponse.log = Collections.singletonList(logEntry);
-        prepareResponse.configChangeActions = new ConfigChangeActions(Collections.emptyList(), Collections.emptyList());
+        prepareResponse.log = List.of(logEntry);
+        prepareResponse.configChangeActions = new ConfigChangeActions(List.of(), List.of());
         return new ActivateResult(new RevisionId("0"), prepareResponse, 0);
     }
 
@@ -818,7 +816,7 @@ public class ApplicationController {
             if (!"warn".equalsIgnoreCase(log.level) && !"warning".equalsIgnoreCase(log.level)) continue;
             warnings.merge(DeploymentMetrics.Warning.all, 1, Integer::sum);
         }
-        return Collections.unmodifiableMap(warnings);
+        return Map.copyOf(warnings);
     }
 
 }
